[package]
name = "async-graphql-axum"
version = "2.9.9"
edition = "2018"

[dependencies]
async-graphql = { path = "../..", version = "2.9.8" }

async-trait = "0.1.51"
axum = "0.1.1"
bytes = "1.0.1"
http = "0.2.4"
http-body = "0.4.2"
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
tokio-util = { version = "0.6.7", features = ["io", "compat"] }
